--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -44,4 +44,6 @@ jobs:
           gh pr create --base main --head release-${{ inputs.version }} \
           --title "Merge release-${{ inputs.version }} into main" \
           --body "Created and published release v${{ inputs.version }}"
+          gh pr ready release-${{ inputs.version }}
+          gh pr merge --auto --delete-branch --merge release-${{ inputs.version }}
             
