add git commit config

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -32,7 +32,7 @@ jobs:
       next-version: ${{ inputs.next-version }}
     secrets: inherit
 
-  merge:
+  pull-request:
     needs: [perform-release]
     runs-on: ubuntu-latest
     steps:
