--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -42,6 +42,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Configure Git user
         run: |
+          git config commit.gpgsign true
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
       - name: Maven Release
