Revert "add git commit config"
This reverts commit 0e7bd96b193965c796971c7a22eb13c464021928.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -32,7 +32,7 @@ jobs:
       next-version: ${{ inputs.next-version }}
     secrets: inherit
 
-  pull-request:
+  merge:
     needs: [perform-release]
     runs-on: ubuntu-latest
     steps:
