--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,6 +15,7 @@ on:
 jobs:
 
   prepare-release:
+    name: Prepare Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -25,10 +26,16 @@ jobs:
           git switch main
 
   perform-release:
+    name: Perform Release
     needs: prepare-release
     uses: ./.github/workflows/perform-release.yml
     with:
       version: ${{ inputs.version }}
       next-version: ${{ inputs.next-version }}
     secrets: inherit
+
+  update-docs:
+    name: Update Documentation
+    needs: perform-release
+    uses: ./.github/workflows/update-documentation.yml
             
