--- a/.github/workflows/verify-and-analyze.yml
+++ b/.github/workflows/verify-and-analyze.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   verify-and-analyze:
+    name: Verify and Analyze
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
