--- a/.github/workflows/perform-release.yml
+++ b/.github/workflows/perform-release.yml
@@ -20,6 +20,9 @@ jobs:
       contents: write
       packages: write
     steps:
+      - name: Echo version
+        run: |
+          echo "${{ inputs.version }}"
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
