--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,7 +9,7 @@ jobs:
     name: Prepare Release
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.set_outputs.outputs.version }}
+      version: ${{ steps.resolve-version.outputs.version }}
     steps:
       - uses: actions/checkout@v3
       - name: Resolve Version
