test echo version in reelase

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -28,7 +28,7 @@ jobs:
     needs: prepare-release
     uses: ./.github/workflows/perform-release.yml
     with:
-      version: ${{ needs.resolve-version.outputs.version }}
+      version: ${{ needs.prepare-release.outputs.version }}
     secrets: inherit
 
   update-docs:
