add test echo variables

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,12 +16,13 @@ jobs:
         id: resolve-version
         run: |
           version=$(mvn help:evaluate -Dexpression='project.version' -q -DforceStdout)
+          if [[ "$version" =~ /^[0-9]+(-[0-9]+)*-SNAPSHOT$ ]];
+          then
+            echo "matching"
+          else
+            echo "not matching"
           export VERSION=${version:0:${#version} - 9}
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
-      - name: A/B Check
-        run: |
-          echo "version: ${{ version }}"
-          echo "VERSION: ${{ VERSION }}"
       - name: Create Branch
         run: |
           git switch -c release-${{ steps.resolve-version.outputs.version }}
