--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,7 +16,7 @@ jobs:
         id: resolve-version
         run: |
           version=$(mvn help:evaluate -Dexpression='project.version' -q -DforceStdout)
-          if [[ "$version" =~ /^[0-9]+(\.[0-9]+)*-SNAPSHOT$ ]];
+          if [[ "${version}" =~ /^[0-9]+(\.[0-9]+)*-SNAPSHOT$/gm ]];
           then
             echo "matching"
           else
