add test echo variables

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,14 +16,11 @@ jobs:
         id: resolve-version
         run: |
           version=$(mvn help:evaluate -Dexpression='project.version' -q -DforceStdout)
-          if [[ "${version}" =~ ^[0-9]+(\.[0-9]+)*-SNAPSHOT$ ]];
+          if ! [[ "${version}" =~ ^[0-9]+(\.[0-9]+)*-SNAPSHOT$ ]];
           then
-            echo "matching"
-          else
-            echo "not matching"
+            echo "Expected "*-SNAPSHOT" version, but found: ${version}"
           fi
-          export VERSION=${version:0:${#version} - 9}
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          echo "version=${version:0:${#version} - 9}" >> $GITHUB_OUTPUT
       - name: Create Branch
         run: |
           git switch -c release-${{ steps.resolve-version.outputs.version }}
