--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,6 +19,7 @@ jobs:
           if ! [[ "${version}" =~ ^[0-9]+(\.[0-9]+)*-SNAPSHOT$ ]];
           then
             echo "Expected "*-SNAPSHOT" version, but found: ${version}"
+            exit 1
           fi
           echo "version=${version:0:${#version} - 9}" >> $GITHUB_OUTPUT
       - name: Create Branch
